@@ -87,11 +87,15 @@ def form(url, method="post", multipart=False, hidden_fields=None, **attrs):
     >>> form("/submit", method="get")
     literal(u'<form action="/submit" method="get">')
     >>> form("/submit", method="put")
-    literal(u'<form action="/submit" method="post"><div style="display:none">\\n<input id="_method" name="_method" type="hidden" value="put" />\\n</div>\\n')
+    literal(u'<form action="/submit" method="post"><div style="display:none">\\n<input name="_method" type="hidden" value="put" />\\n</div>\\n')
     >>> form("/submit", "post", multipart=True) 
     literal(u'<form action="/submit" enctype="multipart/form-data" method="post">')
 
-    Changed in WebHelpers 2.0b2: add <div> and ``hidden_fields`` arg.
+    Changed in WebHelpers 1.0b2: add <div> and ``hidden_fields`` arg.
+
+    Changed in WebHelpers 1.2: don't add an "id" attribute to hidden tags
+    generated by this helper; they clash if there are multiple forms on the
+    page.
     """
     fields = []
     attrs["action"] = url
@@ -101,7 +105,7 @@ def form(url, method="post", multipart=False, hidden_fields=None, **attrs):
         attrs['method'] = method
     else:
         attrs['method'] = "post"
-        field = hidden("_method", method)
+        field = hidden("_method", method, id=None)
         fields.append(field)
     if hidden_fields is not None:
         try:
@@ -109,7 +113,7 @@ def form(url, method="post", multipart=False, hidden_fields=None, **attrs):
         except AttributeError:
             it = hidden_fields
         for name, value in it:
-            field = hidden(name, value)
+            field = hidden(name, value, id=None)
             fields.append(field)
     if fields:
         div = HTML.div(style="display:none", _nl=True, *fields)
