@@ -8,7 +8,7 @@ in boldface;** these may require modifying your application.  See `Changelog
 Version 1.2
 -----------
 
-*webhelpers.html*: The HTML builder now uses Armin Ronacher's
+*webhelpers.html:* The HTML builder now uses Armin Ronacher's
 "MarkupSafe" package, which Mako and Pylons have also switched to.  MarkupSafe
 has a C speedup for escaping, escapes single-quotes for greater security (to
 close a potential XSS attack route), and adds new methods to ``literal``.
@@ -19,6 +19,10 @@ close a potential XSS attack route), and adds new methods to ``literal``.
 
 *Note*: ``escape_silent`` does not exist yet in MarkupSafe 0.9.3, but
 WebHelpers has a fallback. 
+
+*webhelpers.html.tags:* **Don't add an "id" attribute to hidden fields
+generated by the ``form()`` helper**: the IDs clash if there are multiple forms
+on the page. To create a hidden field with an ID, call ``hidden()`` directly.
 
 Version 1.1
 -----------
